tests/fixtures/runtime_fail_fast.posix.stderr
Error in tests/fixtures/runtime_fail_fast.sh2:3:3
