tests/fixtures/runtime_fail_fast.sh2
func main() {
  print("before")
  run("sh", "-c", "exit 7")
  print("after")
}
